rest/ip_messaging/v2/README.md
# Go API client for openapi

This is the public Twilio REST API.

## Overview
This API client was generated by the [OpenAPI Generator](https://openapi-generator.tech) project from the OpenAPI specs located at [twilio/twilio-oai](https://github.com/twilio/twilio-oai/tree/main/spec).  By using the [OpenAPI-spec](https://www.openapis.org/) from a remote server, you can easily generate an API client.

- API version: 1.18.0
- Package version: 1.0.0
- Build package: com.twilio.oai.TwilioGoGenerator
For more information, please visit [https://support.twilio.com](https://support.twilio.com)

## Installation

Install the following dependencies:

```shell
go get github.com/stretchr/testify/assert
go get golang.org/x/net/context
```

Put the package under your project folder and add the following in import:

```golang
import "./openapi"
```

## Documentation for API Endpoints

All URIs are relative to *https://ip-messaging.twilio.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*CredentialsApi* | [**CreateCredential**](docs/CredentialsApi.md#createcredential) | **Post** /v2/Credentials | 
*CredentialsApi* | [**DeleteCredential**](docs/CredentialsApi.md#deletecredential) | **Delete** /v2/Credentials/{Sid} | 
*CredentialsApi* | [**FetchCredential**](docs/CredentialsApi.md#fetchcredential) | **Get** /v2/Credentials/{Sid} | 
*CredentialsApi* | [**ListCredential**](docs/CredentialsApi.md#listcredential) | **Get** /v2/Credentials | 
*CredentialsApi* | [**UpdateCredential**](docs/CredentialsApi.md#updatecredential) | **Post** /v2/Credentials/{Sid} | 
*ServicesApi* | [**CreateService**](docs/ServicesApi.md#createservice) | **Post** /v2/Services | 
*ServicesApi* | [**DeleteService**](docs/ServicesApi.md#deleteservice) | **Delete** /v2/Services/{Sid} | 
*ServicesApi* | [**FetchService**](docs/ServicesApi.md#fetchservice) | **Get** /v2/Services/{Sid} | 
*ServicesApi* | [**ListService**](docs/ServicesApi.md#listservice) | **Get** /v2/Services | 
*ServicesApi* | [**UpdateService**](docs/ServicesApi.md#updateservice) | **Post** /v2/Services/{Sid} | 
*ServicesBindingsApi* | [**DeleteBinding**](docs/ServicesBindingsApi.md#deletebinding) | **Delete** /v2/Services/{ServiceSid}/Bindings/{Sid} | 
*ServicesBindingsApi* | [**FetchBinding**](docs/ServicesBindingsApi.md#fetchbinding) | **Get** /v2/Services/{ServiceSid}/Bindings/{Sid} | 
*ServicesBindingsApi* | [**ListBinding**](docs/ServicesBindingsApi.md#listbinding) | **Get** /v2/Services/{ServiceSid}/Bindings | 
*ServicesChannelsApi* | [**CreateChannel**](docs/ServicesChannelsApi.md#createchannel) | **Post** /v2/Services/{ServiceSid}/Channels | 
*ServicesChannelsApi* | [**DeleteChannel**](docs/ServicesChannelsApi.md#deletechannel) | **Delete** /v2/Services/{ServiceSid}/Channels/{Sid} | 
*ServicesChannelsApi* | [**FetchChannel**](docs/ServicesChannelsApi.md#fetchchannel) | **Get** /v2/Services/{ServiceSid}/Channels/{Sid} | 
*ServicesChannelsApi* | [**ListChannel**](docs/ServicesChannelsApi.md#listchannel) | **Get** /v2/Services/{ServiceSid}/Channels | 
*ServicesChannelsApi* | [**UpdateChannel**](docs/ServicesChannelsApi.md#updatechannel) | **Post** /v2/Services/{ServiceSid}/Channels/{Sid} | 
*ServicesChannelsInvitesApi* | [**CreateInvite**](docs/ServicesChannelsInvitesApi.md#createinvite) | **Post** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Invites | 
*ServicesChannelsInvitesApi* | [**DeleteInvite**](docs/ServicesChannelsInvitesApi.md#deleteinvite) | **Delete** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Invites/{Sid} | 
*ServicesChannelsInvitesApi* | [**FetchInvite**](docs/ServicesChannelsInvitesApi.md#fetchinvite) | **Get** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Invites/{Sid} | 
*ServicesChannelsInvitesApi* | [**ListInvite**](docs/ServicesChannelsInvitesApi.md#listinvite) | **Get** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Invites | 
*ServicesChannelsMembersApi* | [**CreateMember**](docs/ServicesChannelsMembersApi.md#createmember) | **Post** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Members | 
*ServicesChannelsMembersApi* | [**DeleteMember**](docs/ServicesChannelsMembersApi.md#deletemember) | **Delete** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Members/{Sid} | 
*ServicesChannelsMembersApi* | [**FetchMember**](docs/ServicesChannelsMembersApi.md#fetchmember) | **Get** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Members/{Sid} | 
*ServicesChannelsMembersApi* | [**ListMember**](docs/ServicesChannelsMembersApi.md#listmember) | **Get** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Members | 
*ServicesChannelsMembersApi* | [**UpdateMember**](docs/ServicesChannelsMembersApi.md#updatemember) | **Post** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Members/{Sid} | 
*ServicesChannelsMessagesApi* | [**CreateMessage**](docs/ServicesChannelsMessagesApi.md#createmessage) | **Post** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Messages | 
*ServicesChannelsMessagesApi* | [**DeleteMessage**](docs/ServicesChannelsMessagesApi.md#deletemessage) | **Delete** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Messages/{Sid} | 
*ServicesChannelsMessagesApi* | [**FetchMessage**](docs/ServicesChannelsMessagesApi.md#fetchmessage) | **Get** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Messages/{Sid} | 
*ServicesChannelsMessagesApi* | [**ListMessage**](docs/ServicesChannelsMessagesApi.md#listmessage) | **Get** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Messages | 
*ServicesChannelsMessagesApi* | [**UpdateMessage**](docs/ServicesChannelsMessagesApi.md#updatemessage) | **Post** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Messages/{Sid} | 
*ServicesChannelsWebhooksApi* | [**CreateChannelWebhook**](docs/ServicesChannelsWebhooksApi.md#createchannelwebhook) | **Post** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Webhooks | 
*ServicesChannelsWebhooksApi* | [**DeleteChannelWebhook**](docs/ServicesChannelsWebhooksApi.md#deletechannelwebhook) | **Delete** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Webhooks/{Sid} | 
*ServicesChannelsWebhooksApi* | [**FetchChannelWebhook**](docs/ServicesChannelsWebhooksApi.md#fetchchannelwebhook) | **Get** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Webhooks/{Sid} | 
*ServicesChannelsWebhooksApi* | [**ListChannelWebhook**](docs/ServicesChannelsWebhooksApi.md#listchannelwebhook) | **Get** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Webhooks | 
*ServicesChannelsWebhooksApi* | [**UpdateChannelWebhook**](docs/ServicesChannelsWebhooksApi.md#updatechannelwebhook) | **Post** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Webhooks/{Sid} | 
*ServicesRolesApi* | [**CreateRole**](docs/ServicesRolesApi.md#createrole) | **Post** /v2/Services/{ServiceSid}/Roles | 
*ServicesRolesApi* | [**DeleteRole**](docs/ServicesRolesApi.md#deleterole) | **Delete** /v2/Services/{ServiceSid}/Roles/{Sid} | 
*ServicesRolesApi* | [**FetchRole**](docs/ServicesRolesApi.md#fetchrole) | **Get** /v2/Services/{ServiceSid}/Roles/{Sid} | 
*ServicesRolesApi* | [**ListRole**](docs/ServicesRolesApi.md#listrole) | **Get** /v2/Services/{ServiceSid}/Roles | 
*ServicesRolesApi* | [**UpdateRole**](docs/ServicesRolesApi.md#updaterole) | **Post** /v2/Services/{ServiceSid}/Roles/{Sid} | 
*ServicesUsersApi* | [**CreateUser**](docs/ServicesUsersApi.md#createuser) | **Post** /v2/Services/{ServiceSid}/Users | 
*ServicesUsersApi* | [**DeleteUser**](docs/ServicesUsersApi.md#deleteuser) | **Delete** /v2/Services/{ServiceSid}/Users/{Sid} | 
*ServicesUsersApi* | [**FetchUser**](docs/ServicesUsersApi.md#fetchuser) | **Get** /v2/Services/{ServiceSid}/Users/{Sid} | 
*ServicesUsersApi* | [**ListUser**](docs/ServicesUsersApi.md#listuser) | **Get** /v2/Services/{ServiceSid}/Users | 
*ServicesUsersApi* | [**UpdateUser**](docs/ServicesUsersApi.md#updateuser) | **Post** /v2/Services/{ServiceSid}/Users/{Sid} | 
*ServicesUsersBindingsApi* | [**DeleteUserBinding**](docs/ServicesUsersBindingsApi.md#deleteuserbinding) | **Delete** /v2/Services/{ServiceSid}/Users/{UserSid}/Bindings/{Sid} | 
*ServicesUsersBindingsApi* | [**FetchUserBinding**](docs/ServicesUsersBindingsApi.md#fetchuserbinding) | **Get** /v2/Services/{ServiceSid}/Users/{UserSid}/Bindings/{Sid} | 
*ServicesUsersBindingsApi* | [**ListUserBinding**](docs/ServicesUsersBindingsApi.md#listuserbinding) | **Get** /v2/Services/{ServiceSid}/Users/{UserSid}/Bindings | 
*ServicesUsersChannelsApi* | [**DeleteUserChannel**](docs/ServicesUsersChannelsApi.md#deleteuserchannel) | **Delete** /v2/Services/{ServiceSid}/Users/{UserSid}/Channels/{ChannelSid} | 
*ServicesUsersChannelsApi* | [**FetchUserChannel**](docs/ServicesUsersChannelsApi.md#fetchuserchannel) | **Get** /v2/Services/{ServiceSid}/Users/{UserSid}/Channels/{ChannelSid} | 
*ServicesUsersChannelsApi* | [**ListUserChannel**](docs/ServicesUsersChannelsApi.md#listuserchannel) | **Get** /v2/Services/{ServiceSid}/Users/{UserSid}/Channels | 
*ServicesUsersChannelsApi* | [**UpdateUserChannel**](docs/ServicesUsersChannelsApi.md#updateuserchannel) | **Post** /v2/Services/{ServiceSid}/Users/{UserSid}/Channels/{ChannelSid} | 


## Documentation For Models

 - [IpMessagingV2Credential](docs/IpMessagingV2Credential.md)
 - [IpMessagingV2Service](docs/IpMessagingV2Service.md)
 - [IpMessagingV2ServiceBinding](docs/IpMessagingV2ServiceBinding.md)
 - [IpMessagingV2ServiceChannel](docs/IpMessagingV2ServiceChannel.md)
 - [IpMessagingV2ServiceChannelChannelWebhook](docs/IpMessagingV2ServiceChannelChannelWebhook.md)
 - [IpMessagingV2ServiceChannelInvite](docs/IpMessagingV2ServiceChannelInvite.md)
 - [IpMessagingV2ServiceChannelMember](docs/IpMessagingV2ServiceChannelMember.md)
 - [IpMessagingV2ServiceChannelMessage](docs/IpMessagingV2ServiceChannelMessage.md)
 - [IpMessagingV2ServiceRole](docs/IpMessagingV2ServiceRole.md)
 - [IpMessagingV2ServiceUser](docs/IpMessagingV2ServiceUser.md)
 - [IpMessagingV2ServiceUserUserBinding](docs/IpMessagingV2ServiceUserUserBinding.md)
 - [IpMessagingV2ServiceUserUserChannel](docs/IpMessagingV2ServiceUserUserChannel.md)
 - [ListBindingResponse](docs/ListBindingResponse.md)
 - [ListChannelResponse](docs/ListChannelResponse.md)
 - [ListChannelWebhookResponse](docs/ListChannelWebhookResponse.md)
 - [ListCredentialResponse](docs/ListCredentialResponse.md)
 - [ListCredentialResponseMeta](docs/ListCredentialResponseMeta.md)
 - [ListInviteResponse](docs/ListInviteResponse.md)
 - [ListMemberResponse](docs/ListMemberResponse.md)
 - [ListMessageResponse](docs/ListMessageResponse.md)
 - [ListRoleResponse](docs/ListRoleResponse.md)
 - [ListServiceResponse](docs/ListServiceResponse.md)
 - [ListUserBindingResponse](docs/ListUserBindingResponse.md)
 - [ListUserChannelResponse](docs/ListUserChannelResponse.md)
 - [ListUserResponse](docs/ListUserResponse.md)


## Documentation For Authorization



## accountSid_authToken

- **Type**: HTTP basic authentication

Example

```golang
auth := context.WithValue(context.Background(), sw.ContextBasicAuth, sw.BasicAuth{
    UserName: "username",
    Password: "password",
})
r, err := client.Service.Operation(auth, args)
```

